--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
     "frontend": "file:",
+    "lucide-vue-next": "^0.487.0",
     "mitt": "^3.0.1",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
