--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "qs": "^6.13.0",
+    "sockjs-client": "^1.6.1",
     "vite-plugin-webpackchunkname": "^1.0.1",
     "vue": "^3.4.37",
     "vue_front": "file:",
     "vue-awesome-paginate": "^1.2.0",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
